# pyThonTrain

./: db-train.py  db_train.py  exceptional.py  lists_with_strings.py  main.py  pyproject.toml  testfile.py  words.py  words2.py
