[tool.poetry]
name = "halffarflungtypes"
version = "0.1.0"
description = ""
authors = ["Mike Fallon <tech.galavant@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
